Styled the look of the landing display

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 <body>
      <div class="header">
-          
+          <div class="self-intro">
+               <h1>Hello, My name is Umar :)</h1>
+          </div>
+          <div class="intro-paragraph">
+               <p>I am a full stack web developer living in Nairobi,Kenya. I enjoy building everything from small business sites to rich interactive web apps.
+                    If you are a business seeking web presence or an employer seeking to hire, you can get in touch with me here.
+               </p>
+          </div>
      </div>
      
      <!-- Scipts to be used. -->
