styled the entrance page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
      <div class="header">
           <div class="self-intro">
-               <h1>Hello, My name is Umar :)</h1>
+               <h1>Hello, My name is Umar</h1>
           </div>
           <div class="intro-paragraph">
-               <img src="./images/sit-removebg-preview.png" class="img-fluid" alt="">
+               <!-- <img src="./images/new.png" class="img-fluid" alt=""> -->
                <p>I am a full stack web developer living in Nairobi,Kenya. I enjoy building everything from small business sites to rich interactive web apps.
                     If you are a business seeking web presence or an employer seeking to hire, you can get in touch with me here.
                </p>
