--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,20 +9,33 @@
      <link rel="stylesheet" href="css/main.css">
      <title>Umar Ali Ngare</title>
 </head>
+
 <body>
+     <div id="overlay">
+          <div class="spinner"></div>
+          <div class="spinner2"></div>
+          <p>On my way Mate...</p>
+     </div>
+
      <div class="header">
           <div class="self-intro">
                <h1>Hello, My name is Umar</h1>
           </div>
           <div class="intro-paragraph">
                <!-- <img src="./images/new.png" class="img-fluid" alt=""> -->
-               <p>I am a full stack web developer living in Nairobi,Kenya. I enjoy building everything from small business sites to rich interactive web apps.
-                    If you are a business seeking web presence or an employer seeking to hire, you can get in touch with me here.
+               <p>I am a full stack web developer living in Nairobi,Kenya. I enjoy building everything from small
+                    business sites to rich interactive web apps.
+                    If you are a business seeking web presence or an employer seeking to hire, you can get in touch with
+                    me here.
                </p>
+               <br>
+               <a href="#" class="btn button">Lets talk</a>
           </div>
      </div>
      
+
      <!-- Scipts to be used. -->
      <script src="./js/main.js"></script>
 </body>
+
 </html>
