--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
      <div class="header">
           <div class="self-intro">
-               <h1>Hello, My name is Umar</h1>
+               <h1>Hello, My name is <span id="span">Umar</span></h1>
           </div>
           <div class="intro-paragraph">
                <!-- <img src="./images/new.png" class="img-fluid" alt=""> -->
@@ -32,7 +32,20 @@
                <a href="#" class="btn button">Lets talk</a>
           </div>
      </div>
-     
+
+     <div id="aboutMe">
+          <div class="abouhead">
+               <h3>Projects</h3>
+          </div>
+          <div class="abouinformation">
+               <div class="about">
+
+               </div>
+               <div class="image">
+
+               </div>
+          </div>
+     </div>
 
      <!-- Scipts to be used. -->
      <script src="./js/main.js"></script>
