--- a/index.html
+++ b/index.html
@@ -37,13 +37,8 @@
           <div class="abouhead">
                <h3>Projects</h3>
           </div>
-          <div class="abouinformation">
-               <div class="about">
-
-               </div>
-               <div class="image">
-
-               </div>
+          <div class="abouinformation container">
+               
           </div>
      </div>
 
