--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     me here.
                </p>
                <br>
-               <a href="#" class="btn button">Lets talk</a>
+               <a href="#" class="btn btn-sm button">Lets chat</a>
           </div>
      </div>
 
@@ -39,7 +39,7 @@
           </div>
           <div class="abouinformation container">
                <div class="github_image">
-                    <img src="./images/git.png" class="img-fluid" alt="">
+                    <img src="./images/git.png" class="img-fluid img-thumbnail" alt="">
                </div>
                <div class="github_info">
                     <h4> GitRica</h4>
@@ -50,10 +50,11 @@
                          <li>AngularJs</li>
                          <li>HTML</li>
                          <li>Css</li>
+                         <li>Github Api</li>
                          <li>Bootstrap</li>
                     </ul>
                     <p>
-                         <a href="#" class="btn btn-sm btn1" target="blank">View Site</a> <a href=""
+                         <a href="https://uomar7.github.io/github_rep/" class="btn btn-sm btn1" target="blank">Go to Site</a> <a href="https://github.com/Uomar7/github_rep"
                               class="btn btn-sm btn2" target="blank">View code</a>
                     </p>
                </div>
@@ -68,24 +69,50 @@
                          <li>Bootstrap</li>
                          <li>CSS</li>
                     </ul>
-                    <a href="#" class="btn btn-sm btn1" target="blank">View Site</a> <a href="" class="btn btn-sm btn2"
+                    <a href="https://ne1ghbour.herokuapp.com" class="btn btn-sm btn1" target="blank">Go to Site</a> <a href="https://github.com/Uomar7/neighbourhood" class="btn btn-sm btn2"
                          target="blank">View code</a>
                </div>
                <div class="neighbour_image">
-                    <img src="./images/neighbourhood.png" class="img-fluid" alt="">
+                    <img src="./images/neighbourhood.png" class="img-fluid img-thumbnail" alt="">
                </div>
           </div>
      </div>
 
      <footer>
-          <div class="socialLinks">
-               <svg class="icos" id="at" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="at" class="svg-inline--fa fa-at fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C118.941 8 8 118.919 8 256c0 137.059 110.919 248 248 248 48.154 0 95.342-14.14 135.408-40.223 12.005-7.815 14.625-24.288 5.552-35.372l-10.177-12.433c-7.671-9.371-21.179-11.667-31.373-5.129C325.92 429.757 291.314 440 256 440c-101.458 0-184-82.542-184-184S154.542 72 256 72c100.139 0 184 57.619 184 160 0 38.786-21.093 79.742-58.17 83.693-17.349-.454-16.91-12.857-13.476-30.024l23.433-121.11C394.653 149.75 383.308 136 368.225 136h-44.981a13.518 13.518 0 0 0-13.432 11.993l-.01.092c-14.697-17.901-40.448-21.775-59.971-21.775-74.58 0-137.831 62.234-137.831 151.46 0 65.303 36.785 105.87 96 105.87 26.984 0 57.369-15.637 74.991-38.333 9.522 34.104 40.613 34.103 70.71 34.103C462.609 379.41 504 307.798 504 232 504 95.653 394.023 8 256 8zm-21.68 304.43c-22.249 0-36.07-15.623-36.07-40.771 0-44.993 30.779-72.729 58.63-72.729 22.292 0 35.601 15.241 35.601 40.77 0 45.061-33.875 72.73-58.161 72.73z"></path></svg>
-               <svg class="icos" id="facebook" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook-f" class="svg-inline--fa fa-facebook-f fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="currentColor" d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"></path></svg>
-               <svg class="icos" id="instagram" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="instagram" class="svg-inline--fa fa-instagram fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg>
-               <svg class="icos" id="linkedin" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" class="svg-inline--fa fa-linkedin-in fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path></svg>
-               <svg class="icos" id="phone" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="phone-alt" class="svg-inline--fa fa-phone-alt fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"></path></svg>
+
+          <div class="connect">
+               <div class="connect_intro">
+                    <h5 style="text-align: center;">Lets Connect</h5>
+               </div>
+               <div class="connect_info container">
+                    <div class="me">
+                         <img src="images/new.png" class="img-fluid img-thumbnail" alt="A pic of umar Ngare">
+                         <p>Lets meet have a cup of coffee and talk more. <br>
+                              Tel (<i class="fas fa-phone"></i>): <a href="tel:+254791557666">+254791557666</a> <br>
+                              Email (<i class="fas fa-at"></i>): <a
+                                   href="mailto:umar.ngare@gmail.com">umar.ngare@gmail.com</a> <br>
+                              Linkedin: <a href="https://www.linkedin.com/in/umarngare/" target="_blank" rel="noopener noreferrer">Umar Ngare</a><br>
+                              Github: <a href="https://github.com/Uomar7" target="_blank" rel="noopener noreferrer">Uomar7</a>
+                         </p>
+                    </div>
+                    <address>
+                         <!-- <p id="visit">Visit </p> -->
+                         <p>Oloitoktok Court <i class="fas fa-map-marker-alt"></i></p>
+                         <p>Nairobi, 00100</p>
+                         <p>Kenya</p>
+                    </address>
+               </div>
           </div>
-          <h4>Let's connect</h4>
+          <div class="socialmedia">
+               <p> <a href="https://www.linkedin.com/in/umarngare/" target="blank"><i class="fab fa-linkedin-in"></i></a></p>
+               <p><a href="https://github.com/Uomar7" target="_blank" rel="noopener noreferrer"><i class="fab fa-github-alt"></i></a></p>
+              <p> <a href="https://www.facebook.com/uomarearlie" target="blank"><i class="fab fa-facebook-f"></i></a></p>
+              <p> <a href="https://www.instagram.com/u.o.m.a.r_officiel/" target="blank"><i class="fab fa-instagram"></i></a></p>
+              <p> <a href="tel:+254791557666"><i class="fas fa-phone"></i></a></p>
+              <p> <a href="mailto:umar.ngare@gmail.com"><i class="fas fa-at"></i></a></p>
+          </div>
+
+          <p style="letter-spacing: 2px; ;text-align: center; font-size: 14px;">Copyright &#169 2019 Umar Ngare</p>
      </footer>
 
      <!-- Scipts to be used. -->
