Removed the form

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     me here.
                </p>
                <br>
-               <a href="#" class="btn btn-sm button">Lets chat</a>
+               <!-- <a href="#" class="btn btn-sm button">Lets chat</a> -->
           </div>
      </div>
 
@@ -96,13 +96,8 @@
                                    rel="noopener noreferrer">Uomar7</a></p>
                     </address>
                </div>
-               <div class="form">
-                    <form>
-                         <p><input type="email" class="form-control" id="fro" placeholder="Email"></p>
-                         <p><input type="text" class="form-control" id="subj" placeholder="Subject"></p>
-                         <p><textarea id="bod" class="form-control" rows="3" placeholder="Lets talk"></textarea></p>
-                         <p><input type="button" class="btn btn-md btn-sm" id="submit" value="Send"  onclick="sendEmail()"></p>
-                    </form>
+               <div class="myDesc">
+                    <p>I am <span id="subs"></span></p>
                </div>
           </div>
           <div class="socialmedia">
@@ -123,8 +118,6 @@
 
      <!-- Scipts to be used. -->
      <script src="./js/main.js"></script>
-     <!-- ! Email script -->
-     <script src="https://smtpjs.com/v3/smtp.js"></script>
      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
           integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
      </script>
