--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                <!-- <img src="./images/new.png" class="img-fluid" alt=""> -->
                <p>I am a full stack web developer living in Nairobi,Kenya. I enjoy building everything from small
                     business sites to rich interactive web apps.
-                    If you are a business seeking web presence or an employer seeking to hire, you can get in touch with
-                    me here.
+                    If you are a business seeking web presence or an employer seeking to hire, you can get in touch.
                </p>
                <br>
                <!-- <a href="#" class="btn btn-sm button">Lets chat</a> -->
@@ -96,9 +95,6 @@
                                    rel="noopener noreferrer">Uomar7</a></p>
                     </address>
                </div>
-               <div class="myDesc">
-                    <p>I am <span id="subs"></span></p>
-               </div>
           </div>
           <div class="socialmedia">
                <p> <a href="https://www.linkedin.com/in/umarngare/" target="blank"><i
@@ -113,7 +109,7 @@
                <p> <a href="mailto:umar.ngare@gmail.com"><i class="fas fa-at"></i></a></p>
           </div>
 
-          <p style="letter-spacing: 2px; ;text-align: center; font-size: 14px;">Copyright &#169 2019 Umar Ngare</p>
+          <p style="letter-spacing: 3px; ;text-align: center; font-size: 10px;padding: 0; margin: 0;">Copyright &#169 2019 Umar Ngare</p>
      </footer>
 
      <!-- Scipts to be used. -->
