--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
      <div id="overlay">
           <div class="spinner"></div>
           <div class="spinner2"></div>
-          <p>On my way Mate...</p>
      </div>
 
      <div class="header">
@@ -97,16 +96,16 @@
                </div>
           </div>
           <div class="socialmedia">
-               <p> <a href="https://www.linkedin.com/in/umarngare/" target="blank"><i
+               <p> <a id="in" href="https://www.linkedin.com/in/umarngare/" target="blank"><i
                               class="fab fa-linkedin-in"></i></a></p>
-               <p><a href="https://github.com/Uomar7" target="_blank" rel="noopener noreferrer"><i
+               <p><a id="git" href="https://github.com/Uomar7" target="_blank" rel="noopener noreferrer"><i
                               class="fab fa-github-alt"></i></a></p>
-               <p> <a href="https://www.facebook.com/uomarearlie" target="blank"><i class="fab fa-facebook-f"></i></a>
+               <p> <a id="fb" href="https://www.facebook.com/uomarearlie" target="blank"><i class="fab fa-facebook-f"></i></a>
                </p>
-               <p> <a href="https://www.instagram.com/u.o.m.a.r_officiel/" target="blank"><i
+               <p> <a id="ig" href="https://www.instagram.com/u.o.m.a.r_officiel/" target="blank"><i
                               class="fab fa-instagram"></i></a></p>
-               <p> <a href="tel:+254791557666"><i class="fas fa-phone"></i></a></p>
-               <p> <a href="mailto:umar.ngare@gmail.com"><i class="fas fa-at"></i></a></p>
+               <p> <a id="cll" href="tel:+254791557666"><i class="fas fa-phone"></i></a></p>
+               <p> <a id="gml" href="mailto:umar.ngare@gmail.com"><i class="fas fa-at"></i></a></p>
           </div>
 
           <p style="letter-spacing: 3px; ;text-align: center; font-size: 10px;padding: 0; margin: 0;">Copyright &#169 2019 Umar Ngare</p>
