Added the download cv feature

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     If you are a business seeking web presence or an employer seeking to hire, you can get in touch.
                </p>
                <br>
-               <!-- <a href="#" class="btn btn-sm button">Lets chat</a> -->
+               <a href="./doc/UMAR NGARE CURRICULUM VITAE.pdf" class="btn btn-sm button" download="UMAR NGARE CV">Download CV</a>
           </div>
      </div>
 
