Download feature added

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                     business sites to rich interactive web apps.
                     If you are a business seeking web presence or an employer seeking to hire, you can get in touch.
                </p>
-               <br>
-               <a href="./doc/UMAR NGARE CURRICULUM VITAE.pdf" class="btn btn-sm button" download="UMAR NGARE CV">Download CV</a>
+               
           </div>
      </div>
 
@@ -92,6 +91,8 @@
                                    rel="noopener noreferrer">Umar Ngare</a></p>
                          <p> Github: <a href="https://github.com/Uomar7" target="_blank"
                                    rel="noopener noreferrer">Uomar7</a></p>
+                                   <p>               <a id="download" href="./doc/UMAR NGARE CURRICULUM VITAE.pdf" download="UMAR NGARE CV">Download CV</a>
+                                   </p>
                     </address>
                </div>
           </div>
